style.css
.dwmenu{width:80%;}
.dwmenu.center{margin:0 auto;}
.dwmenu.left{float:left}
.dwmenu.right{float:right}
.dwmenu_caption{font-size: medium !important;font-weight: bold;}
.dwmenu_item{display:inline-block;padding: 5px 2px;}
.dwmenu_item img{float:left;padding-right: 5px;vertical-align: top;width: 48px;}
.dwmenu_item.column1{width:100%}
.dwmenu_item.column2{width:49%}
.dwmenu_item.column3{width:32%}
.dwmenu_item.column4{width:24%}
.dwmenu_item.column5{width:19%}
.dwmenu_item.column6{width:16%}
.dwmenu_item.column7{width:14%}
.dwmenu_item.column8{width:12%}
.dwmenu_item.column9{width:11%}
.dwmenu_item.column10{width:10%}
.dwmenu_itemhead{font-weight: bold;margin-left: 53px;}
.dwmenu_itemdesc{margin-left: 53px;font-size: 87.5%;font-style: italic;}
.dwmenu_itemlink{margin-left: 53px;}

